--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang "en">this show the language used to write codes</html>
-<head> The head is the section that has the metadata of the web.
-<title>title gives a hint of a subsection in a web</title>
-</head>
+<html lang="en">
+    <head>
+    <meta charset="UTF-8">
+
+    <title>My Site Title</title>
+    <link rel="stylesheet"  href="style.css">
+    </head>
 <body>
-    Body has the content of the webpage.
+    
     <!--this is a comment-->
-<link rel="stylesheet" type="text/css" href="company.css" />
-<!--Links are used to bound data from different environments into one final webpage-->
+<p> html structure</p>
+
 </body>
-
-
 
 </html>
